# kminimize

./: .gitignore  Cargo.toml
crates/gather/: Cargo.toml
crates/gather/src/: lib.rs
crates/gcov/: Cargo.toml
crates/gcov/src/: lib.rs
crates/kbuild/: Cargo.toml
crates/kbuild/src/: lib.rs
crates/kconfig/: Cargo.toml
crates/kconfig/src/: lib.rs
